tests/spec/compile-pass/026_thread_auto_send_plain_struct.zn
// category: compile-pass
// profile: hosted
// purpose: plain data structs automatically satisfy Send and can move into threads

module tests.pass.threadAutoSendPlainStruct;

import core.result.{Result, Ok};
import std.thread.Thread;

enum Error {
    Failed,
}

struct Job {
    id: U64,
    priority: U32,
}

fn main() -> Result<Unit, Error> {
    let job = Job { id: 42, priority: 7 };
    let handle = try Thread.spawn(move () -> Result<Unit, Error> {
        let ignored = job.id + job.priority as U64;
        return Ok(());
    });
    try move handle.join();
    return Ok(());
}
